--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ apply plugin: 'java'
 apply plugin: 'jetty'
 
 def defaultEncoding = 'UTF-8'
+[compileJava, compileTestJava]*.options*.encoding = defaultEncoding
 
 httpPort = 1234
 
@@ -28,6 +29,10 @@ configurations {
 dependencies {
     compile 'org.glassfish.jersey.core:jersey-server:2.13'
     compile 'org.glassfish.jersey.containers:jersey-container-jdk-http:2.13'
+    compile 'org.glassfish.jersey.containers:jersey-container-servlet:2.13'
+    compile 'org.glassfish.jersey.ext:jersey-mvc:2.13'
+    compile 'javax.servlet:javax.servlet-api:3.0.1'
+    compile 'org.thymeleaf:thymeleaf:2.1.4.RELEASE'
     testCompile 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-jdk-http:2.13'
     testCompile 'junit:junit:4.11'
 }
